--- a/web/modules/custom/wkm_test/wkm_test.routing.yml
+++ b/web/modules/custom/wkm_test/wkm_test.routing.yml
@@ -23,3 +23,9 @@ wkm.example.form:
     _title: 'Wai Example form'
   requirements:
     _permission: 'administer site configuration'
+wkm.example.user:
+  path: wkm/user-info
+  defaults:
+    _controller: '\Drupal\wkm_test\Controller\WkmController::user_info'
+  requirements:
+    _access: 'TRUE'
