--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "drupal/redirect": "^1.3",
         "drupal/token": "^1.5",
         "drupal/views_bulk_operations": "^2.4",
+        "drupal/webform": "^5.1",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
