--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,13 @@
         "drupal/core": "^8.6.0",
         "drupal/devel": "^1.2",
         "drupal/ds": "^3.2",
+        "drupal/entity_browser": "^2.0",
         "drupal/filefield_paths": "1.x-dev",
+        "drupal/inline_entity_form": "^1.0@RC",
+        "drupal/paragraphs": "^1.5",
         "drupal/pathauto": "^1.3",
         "drupal/redirect": "^1.3",
+        "drupal/simplei": "^1.1",
         "drupal/token": "^1.5",
         "drupal/views_bulk_operations": "^2.4",
         "drupal/webform": "^5.1",
