--- a/composer.json
+++ b/composer.json
@@ -21,20 +21,31 @@
         "cweagans/composer-patches": "^1.6.5",
         "drupal-composer/drupal-scaffold": "^2.5",
         "drupal/admin_toolbar": "^1.25",
+        "drupal/anchor_link": "^1.6",
+        "drupal/ckeditor_a11ychecker": "^1.0",
+        "drupal/ckeditor_balloonpanel": "^1.1",
         "drupal/console": "^1.0.2",
         "drupal/core": "^8.6.0",
         "drupal/devel": "^1.2",
         "drupal/ds": "^3.2",
+        "drupal/embed": "^1.0",
         "drupal/entity_browser": "^2.0",
+        "drupal/entity_embed": "^1.0",
+        "drupal/field_group": "^1.0",
         "drupal/filefield_paths": "1.x-dev",
         "drupal/inline_entity_form": "^1.0@RC",
+        "drupal/link_attributes": "^1.8",
+        "drupal/link_target": "^1.2",
+        "drupal/menu_item_extras": "^2.6",
         "drupal/paragraphs": "^1.5",
         "drupal/pathauto": "^1.3",
         "drupal/redirect": "^1.3",
         "drupal/simplei": "^1.1",
         "drupal/token": "^1.5",
+        "drupal/token_filter": "^1.1",
         "drupal/views_bulk_operations": "^2.4",
         "drupal/webform": "^5.1",
+        "drupal/xmlsitemap": "^1.0@alpha",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
